--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,14 @@
 <div class="grid-container">
-  <h1 class="mat-h1">Dashboard</h1>
+  <h1 class="mat-h1">編集する動画を選択</h1>
+  <app-file-button [disabled]="!(loaded$ | async)" [accept]="video/mp4" [(file)]="file" (fileChange)="onFileSelect($event)"></app-file-button>
+  <video id="video-element" controls>
+    <source type="video/mp4">
+  </video>
+  <canvas id="canvas-element"></canvas>
+  <div id="thumbnail-container">
+      Seek to <select id="set-video-seconds"></select> seconds <a id="download-link" href="#">Download Thumbnail</a>
+  </div>
+
   <mat-grid-list cols="2" rowHeight="350px">
     <mat-grid-tile *ngFor="let card of cards | async" [colspan]="card.cols" [rowspan]="card.rows">
       <mat-card class="dashboard-card">
@@ -21,4 +30,5 @@
       </mat-card>
     </mat-grid-tile>
   </mat-grid-list>
+
 </div>
