--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="grid-container">
   <h1 class="mat-h1">編集する動画を選択</h1>
-  <app-file-button [disabled]="!(loaded$ | async)" [accept]="video/mp4" [(file)]="file" (fileChange)="onFileSelect($event)"></app-file-button>
+  <app-file-button [disabled]="!(loaded$ | async)" accept="video/mp4" [(file)]="srcFile" (fileChange)="onFileSelect($event)"></app-file-button>
   <video id="video-element" controls>
     <source type="video/mp4">
   </video>
